@@ -14,7 +14,6 @@
     <property name="resizable">False</property>
     <property name="decorated">False</property>
     <property name="has_resize_grip">False</property>
-    <signal name="size-allocate" handler="login_window_size_allocate_cb" swapped="no"/>
     <child>
       <object class="GtkNotebook" id="login_notebook">
         <property name="width_request">400</property>
@@ -59,10 +58,10 @@
                 <property name="headers_visible">False</property>
                 <property name="fixed_height_mode">True</property>
                 <property name="enable_grid_lines">horizontal</property>
-                <signal name="button-press-event" handler="user_treeview_button_press_event_cb" swapped="no"/>
-                <signal name="row-activated" handler="user_treeview_row_activated_cb" swapped="no"/>
                 <child internal-child="selection">
-                  <object class="GtkTreeSelection" id="treeview-selection1"/>
+                  <object class="GtkTreeSelection" id="treeview-selection1">
+                     <signal name="changed" handler="user_treeview_selection_changed_cb" swapped="no"/>
+                  </object>
                 </child>
               </object>
               <packing>
